test/spec_vectors/simd_f64x2/fail/module_4.wat
(module (func $f64x2.abs-arg-empty (result v128) (f64x2.abs)))